@@ -48,7 +48,7 @@ public class SecondFragment extends Fragment {
     private FloatingActionButton fab_cam;
     private CardAdapter adapter;
     private boolean isMenuOpen = false;
-    private Uri imgUri;
+    private Uri imgUri, photoURI;
 
     public static SecondFragment newInstance() {
         Bundle args = new Bundle();
@@ -184,7 +184,7 @@ public class SecondFragment extends Fragment {
             return;
         }
 
-        Uri photoURI = imgUri;
+        photoURI = imgUri;
 
         switch (requestCode){
             case PICK_FROM_ALBUM : {
@@ -218,15 +218,15 @@ public class SecondFragment extends Fragment {
         }
         MapCoord coord = new MapCoord();
         InputStream in = null;
+        ExifInterface exif = null;
         try {
             in = activity.getContentResolver().openInputStream(photoURI);
+            exif = new ExifInterface(in);
+
         } catch (FileNotFoundException e) {
             e.printStackTrace();
         }
-        ExifInterface exif = null;
-        try {
-            exif = new ExifInterface(in);
-        } catch (IOException e) {
+        catch (IOException e) {
             e.printStackTrace();
         }
 
@@ -332,18 +332,18 @@ public class SecondFragment extends Fragment {
         String[] DMS = stringDMS.split(",", 3);
 
         String[] stringD = DMS[0].split("/", 2);
-        Double D0 = new Double(stringD[0]);
-        Double D1 = new Double(stringD[1]);
+        Double D0 = Double.valueOf(stringD[0]);
+        Double D1 = Double.valueOf(stringD[1]);
         Double FloatD = D0/D1;
 
         String[] stringM = DMS[1].split("/", 2);
-        Double M0 = new Double(stringM[0]);
-        Double M1 = new Double(stringM[1]);
+        Double M0 = Double.valueOf(stringM[0]);
+        Double M1 = Double.valueOf(stringM[1]);
         Double FloatM = M0/M1;
 
         String[] stringS = DMS[2].split("/", 2);
-        Double S0 = new Double(stringS[0]);
-        Double S1 = new Double(stringS[1]);
+        Double S0 = Double.valueOf(stringS[0]);
+        Double S1 = Double.valueOf(stringS[1]);
         Double FloatS = S0/S1;
 
         result = new Float(FloatD + (FloatM/60) + (FloatS/3600));
@@ -361,6 +361,7 @@ public class SecondFragment extends Fragment {
                     public void onClick(DialogInterface dialog, int which) {
                         Toast.makeText(activity.getApplicationContext(),"예를 선택했습니다.",Toast.LENGTH_LONG).show();
                         Intent intent = new Intent(mContext, AddCoord.class);
+                        intent.putExtra("Uri", photoURI);
                         mContext.startActivity(intent);
                     }
                 });
